force-app/main/default/objects/Construction_Management__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Assigned_User__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Assigned_User__c</referenceTo>
        <relationshipLabel>Step 24: Construction Management</relationshipLabel>
        <relationshipName>Step_24_Construction_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirm_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constructability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constructability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Interface_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Interface Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITB_Construction_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ITB : Construction Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsWaitingForPreviousStep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWaitingForPreviousStep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layout_Plot_Plan_and_Site_Facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Layout, Plot Plan and Site Facilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method_Statement_and_JSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Method Statement and JSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, &quot;Construction Management&quot;,&quot;_self&quot;)</formula>
        <label>Work Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>24</defaultValue>
        <label>No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_to_Work_and_Clearance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permit to Work and Clearance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Construction_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_and_Confirm_Drawing_for_Constru__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Drawing for Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected User is not SME. Please select SME user.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notEqual</operation>
                <value>PM</value>
            </filterItems>
            <infoMessage>Please select SME user.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Step 24: Construction Management</relationshipLabel>
        <relationshipName>Step_24_Construction_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSHE_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSHE Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope of Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Communication_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Communication Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_Status__c</fullName>
        <label>Submit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Submit_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transportation_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transportation Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_for_Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Permit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Permit Approval From Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Process_Status__c</fullName>
        <label>Work Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Work_Process_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Step 24 : Construction Management</label>
    <nameField>
        <displayFormat>WP24-{00000}</displayFormat>
        <label>Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Step_24_After_Submit</fullName>
        <active>true</active>
        <label>Step 24 : After Submit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Step_24_Before_Submit</fullName>
        <active>true</active>
        <label>Step 24 : Before Submit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>